--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.9",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
