--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@supabase/supabase-js": "^2.49.9",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
